fix alignment

--- a/style.css
+++ b/style.css
@@ -52,9 +52,11 @@ body {
     color: #d5d6d7;
     font-family: PopRegular;
     font-size: 8%;
+    padding-bottom: 0;
 }
 
 .head2 {
+    margin-top: 0;
     text-align: left;
     color: #c9c9c9;
     font-family: PopLight;
@@ -181,6 +183,7 @@ body {
     }
 
     .container {
+        padding-left: 17vw !important;
         font-size: 70vw;
     }
 
